force-app/main/default/objects/Employee_Allocation__c/Employee_Allocation__c.object-meta.xml
<CustomObject>
    <label>Employee Allocation</label>
    <nameField>
        <displayFormat>EA-{000000}</displayFormat>
        <label>Employee Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>