force-app/main/default/objects/Employee_Allocation__c/fields/Allocation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percent__c</fullName>
    <formula>IF(Total_Allocation_Hours__c != 0, (Total_Allocation_Hours__c)/(Planned_Allocation_Hours__c ), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>