force-app/main/default/objects/Employee_Allocation__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employee Allocations</relationshipLabel>
    <relationshipName>Employee_Alocations</relationshipName>
    <type>Lookup</type>
</CustomField>