force-app/main/default/objects/Employee_Allocation__c/fields/Planned_Allocation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Allocation_Hours__c</fullName>
    <formula>No_of_Working_Days__c *8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Allocation Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>