force-app/main/default/objects/Employee_Allocation__c/fields/Release_Name__c.field-meta.xml
<CustomField>
    <fullName>Release_Name__c</fullName>
    <label>Release Name</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipLabel>Employee Allocations</relationshipLabel>
    <relationshipName>Employee_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>