force-app/main/default/objects/Employee_Allocation__c/fields/Total_Allocation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Allocation_Hours__c</fullName>
    <label>Total Allocation Hours</label>
    <summarizedField>Allocation_Details__c.Allocation_Hours__c</summarizedField>
    <summaryForeignKey>Allocation_Details__c.Employee_Allocation_Details__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>