force-app/main/default/objects/Employee_Allocation__c/fields/Week_Start_Allocation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Allocation_End_Date__c</fullName>
    <formula>IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=0, 
End_Date__c,/*Monday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=1, 
End_Date__c-1,/*Tuesday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=2, 
End_Date__c-2,/*Wednesday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=3, 
End_Date__c-3,/*Thursday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=4, 
End_Date__c-4,/*Friday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=5, 
End_Date__c-5,/*Saturday*/ 

IF 
(MOD(End_Date__c - DATE(1900,1,8),7)=6, 
End_Date__c-6,/*Sunday*/ 

DATE(1878,1,1))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Start Allocation End Date</label>
    <type>Date</type>
</CustomField>