force-app/main/default/objects/Employee_Allocation__c/fields/Week_Start_Allocation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Allocation_Start_Date__c</fullName>
    <formula>IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=0, 
Start_Date__c,/*Monday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=1, 
Start_Date__c-1,/*Tuesday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=2, 
Start_Date__c-2,/*Wednesday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=3, 
Start_Date__c-3,/*Thursday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=4, 
Start_Date__c-4,/*Friday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=5, 
Start_Date__c-5,/*Saturday*/ 

IF 
(MOD(Start_Date__c - DATE(1900,1,8),7)=6, 
Start_Date__c-6,/*Sunday*/ 

DATE(1878,1,1))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Start Allocation Start Date</label>
    <type>Date</type>
</CustomField>